05-ci-cd/06-gitops-cd-argocd/config_repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-webapp
  labels:
    app.kubernetes.io/name: gitops-webapp
    app.kubernetes.io/part-of: gitops-pipeline
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitops-webapp
